Fixed bug again with the image gallery and the navigation header. Reducing the z-index of the image gallery made it so that it could not be clicked on. This time, I increased the z-index of the navigation header instead, which seems to have fixed the bug (the navigation header appears on top of the image gallery when scrolling and the image gallery can still be clicked on).

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,7 @@ body {
     left: 0;
     width: 100%;
     background-color: black;
+    z-index: 1;
 }
 
 #mobile-nav-menu {
@@ -22,6 +23,7 @@ body {
     top: 50px;
     left: 0;
     width: 100%;
+    z-index: 1;
 }
 
 #navbar-links-mobile {
@@ -192,7 +194,6 @@ body {
     display: block;
     height: 500px;
     margin: auto;
-    z-index: -1;
 }
 
 .project-image-gallery-arrow-button {
